--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -2,14 +2,16 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    
 }
 
 .ropa{
     border: 0.5px solid black;
-    margin: 10px;
-    margin-top: 30px;
+    margin-top: 10px;
+    width: 20%;
+    
     img{
-        width: 300px;
+        width: 100%;
         
     }
 }
