FEAT: componentes and fix login y register

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -8,10 +8,9 @@
 .ropa{
     border: 0.5px solid black;
     margin-top: 10px;
-    width: 20%;
+    // width: 20%;
     
     img{
-        width: 100%;
-        
+        width: 200px;
     }
 }
