--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 h1{
   margin:2px;
