--- a/src/pages/Login.scss
+++ b/src/pages/Login.scss
@@ -6,6 +6,10 @@
     align-items: flex-start;
     height: 450px;
 
+    .email{
+        padding-right: 41px;
+    }
+
     .usuario{
         padding-right: 40px;
     }
