--- a/src/pages/Register.scss
+++ b/src/pages/Register.scss
@@ -5,13 +5,11 @@
     align-items: flex-start;
     
 
-    .usuario{
-        padding-right: 40px;
+    .usuariop{
+        padding-right: 73px;
     }
     
-    .usuario{
-        padding-right: 30px;
-    }
+    
 
     input{
         margin: 10px;
