--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,16 +1,26 @@
-.container{
+.fotos{
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    
-}
+    gap: 15px;
+    height: 700px;
+    .foto {
+        position: relative;
+        text-align: center;
+        color: white;
+        width: 100%;
+        margin: 10px;
+        height: 700px;
+   img{
+    width:100%;
+    height: 700px;
+   }
 
-.ropa{
-    border: 0.5px solid black;
-    margin-top: 10px;
-    // width: 20%;
-    
-    img{
-        width: 200px;
+   .center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 45px;
+}
+        
     }
 }
