--- a/src/pages/AboutUs.scss
+++ b/src/pages/AboutUs.scss
@@ -1,7 +1,8 @@
 .imageAbout{
-    
+    padding-top: 100px;
     display: flex;
-    height: 750px;
+    height: 1000px;
+    
 
     .about{
         width: 700px;
