--- a/src/componentes/Imagen.scss
+++ b/src/componentes/Imagen.scss
@@ -4,6 +4,7 @@
     color: white;
     width: 100%;
     margin: 10px;
+    :hover {filter: opacity(.5);};
    img{
     width:100%;
    }
@@ -14,4 +15,5 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 45px;
+    font-weight:bolder;
 }
