--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -2,6 +2,7 @@
     display: flex;
     gap: 15px;
     height: 700px;
+    
     .foto {
         position: relative;
         text-align: center;
@@ -9,9 +10,13 @@
         width: 100%;
         margin: 10px;
         height: 700px;
+        :hover {filter: opacity(.5);};
+        
+        transition: all .35s ease-in-out;
    img{
     width:100%;
     height: 700px;
+    
    }
 
    .center{
