--- a/src/componentes/Navbar.scss
+++ b/src/componentes/Navbar.scss
@@ -4,11 +4,9 @@
     justify-content: center;
     gap: 20px;
     
-    .active{
+    .hover:hover{
         text-decoration: underline;
-        
     }
-
     a{
         text-decoration: none;
         color: black;
