--- a/src/pages/AboutUs.scss
+++ b/src/pages/AboutUs.scss
@@ -1,17 +1,19 @@
 .imageAbout{
-    padding-top: 100px;
+    
     display: flex;
     height: 1000px;
     
+    
 
     .about{
-        width: 700px;
+        margin-left: 15px;
+        width: 650px;
         margin-top: 10px;
         background-color: rgb(244, 242, 242);
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 718px;
+        height: 749px;
         p{
             text-align: justify;
             width: 500px;
