--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,31 +1,32 @@
-.fotos{
-    display: flex;
-    gap: 15px;
-    height: 700px;
-    
-    .foto {
-        position: relative;
-        text-align: center;
-        color: white;
-        width: 100%;
-        margin: 10px;
-        height: 700px;
-        :hover {filter: opacity(.5);};
-        
-        transition: all .35s ease-in-out;
-   img{
-    width:100%;
-    height: 700px;
-    
-   }
+.fotos {
+  display: flex;
+  gap: 15px;
+  height: 700px;
 
-   .center{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 45px;
-}
-        
+  .foto {
+    position: relative;
+    text-align: center;
+    color: white;
+    width: 100%;
+    margin-top: 10px;
+    height: 700px;
+    :hover {
+      filter: opacity(0.5);
+      transition: all 0.35s ease-in-out;
     }
+
+    
+    img {
+      width: 100%;
+      height: 700px;
+    }
+
+    .center {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 45px;
+    }
+  }
 }
