--- a/src/componentes/Navbar.scss
+++ b/src/componentes/Navbar.scss
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+    width: 100%;
+    
     
     .active{
         text-decoration: underline;
@@ -14,7 +16,14 @@
         text-decoration: none;
         color: black;
     }
-    p{
-        margin-left: 20px;
-    }
+   
+}
+.user-log{
+    display: flex;
+    align-items:center ;
+    
+}
+.user{
+    font-style: italic;
+    font-weight: 400;
 }
